HelloUltraviolet/Fixtures/RejectedSource/Patterns/CaseClausesDiagnostic/Expected.uv
//! Expected diagnostic metadata for the CaseClausesDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-2751", "diag.17.CaseClauses")
